--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-flags-select": "^2.5.0",
+    "react-hook-form": "^7.65.0",
+    "react-phone-input-2": "^2.15.1",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1"
   },
